# app-pass

./: README.md  pyproject.toml
.github/workflows/: main.yaml  test.yml
conda-recipe/: meta.yaml
dev/: README.md  environment-dev.yaml
src/app_pass/: __main__.py  _app.py  _commands.py  _issues.py  _jar.py  _macho.py  _util.py
tests/: test_commands.py
