[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "app_pass"
version = "0.1.0dev1"
authors = [
  {name = "Dominik Kutra", email = "dominik.kutra@embl.de"}
]
maintainers = [
  {name = "Dominik Kutra", email = "dominik.kutra@embl.de"}
]
description = "Tool to ensure an .app bundle pass the Gatekeeper on MacOS."
readme = "README.md"
license = {text = "MIT"}

dependencies = [
  "rich",
  "structlog",
  "typer",
]

requires-python = ">=3.10"

[project.scripts]
app-pass = "app_pass.__main__:main"


[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | _build
    | build
    | dist
  )/
)
'''
